ctint/3.3.x/_sources/cpp2rst_generated/triqs_ctint/solver_core.rst.txt
..
   Generated automatically by cpp2rst

.. highlight:: c
.. role:: red
.. role:: green
.. role:: param


.. _triqs_ctint__solver_core:

triqs_ctint::solver_core
========================

*#include <triqs_ctint.hpp>*

.. rst-class:: cppsynopsis

      class  :red:`solver_core`

The Solver class


Public members
--------------

.. table::
   :widths: 40 60


   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | average_sign             | mc_weight_t                                     |  Average sign of the CTINT                                                                                                                          |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | nmeasures                | uint64_t                                        |  Total number of measures                                                                                                                           |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | average_k                | double                                          |  Average perturbation order                                                                                                                         |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | auto_corr_time           | double                                          |  Auto-correlation time                                                                                                                              |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | warmup_time              | double                                          |  Warmup time in seconds                                                                                                                             |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | accumulation_time        | double                                          |  Accumulation time in seconds                                                                                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | histogram                | std::optional<std::vector<double>>              |  Average perturbation order distribution                                                                                                            |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | density                  | std::optional<block_matrix_t>                   |  The density matrix (measured by operator insertion)                                                                                                |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M_tau                    | std::optional<block_gf<imtime, M_tau_target_t>> |  Building block for the Green function in imaginary time (Eq. (23) in Notes)                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M_hartree                | std::optional<block_matrix_t>                   |  Hartree-term of M_tau                                                                                                                              |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M_iw_nfft                | std::optional<g_iw_t>                           |  Same as M_tau, but measured directly in Matsubara frequencies using NFFT                                                                           |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M4_iw                    | std::optional<chi4_iw_t>                        |  Building block for the full vertex function measured directly in Matsubara frequencies using NFFT                                                  |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M4pp_iw                  | std::optional<chi4_iw_t>                        |  Building block for the full vertex function (pp channel) measured directly in Matsubara frequencies using NFFT                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M4ph_iw                  | std::optional<chi4_iw_t>                        |  Building block for the full vertex function (ph channel) measured directly in Matsubara frequencies using NFFT                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3pp_iw_nfft             | std::optional<chi3_iw_t>                        |  Building block for the fermion boson vertex (pp channel) in Matsubara frequencies using NFFT                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3ph_iw_nfft             | std::optional<chi3_iw_t>                        |  Building block for the fermion boson vertex (ph channel) in Matsubara frequencies using NFFT                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3pp_tau                 | std::optional<chi3_tau_t>                       |  Building block for the fermion boson vertex (pp channel) in imaginary time                                                                         |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3ph_tau                 | std::optional<chi3_tau_t>                       |  Building block for the fermion boson vertex (ph channel) in imaginary time                                                                         |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3xph_tau                | std::optional<chi3_tau_t>                       |  Building block for the fermion boson vertex (xph channel) in imaginary time                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3pp_delta               | std::optional<chi2_tau_t>                       |  Equal-time peak in M3pp_tau                                                                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3ph_delta               | std::optional<chi2_tau_t>                       |  Equal-time peak in M3ph_tau                                                                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3xph_delta              | std::optional<chi2_tau_t>                       |  Equal-time peak in M3ph_tau                                                                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2pp_tau               | std::optional<chi2_tau_t>                       |  The equal time correlator :math:`\chi_2` in the particle-particle channel in imaginary times as obtained by operator insertion                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2ph_tau               | std::optional<chi2_tau_t>                       |  The equal time correlator :math:`\chi_2` in the particle-hole channel in imaginary times as obtained by operator insertion                         |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chiAB_tau                | std::optional<gf<imtime>>                       |  The correlation function :math:`\chi_AB` in imaginary times                                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M_iw                     | std::optional<g_iw_t>                           |  The Fourier-transform of M_tau. Dependent on M_tau                                                                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G_iw                     | g_iw_t                                          |  Greens function in Matsubara frequencies (Eq. (18) in Notes). Dependent on M_iw                                                                    |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | Sigma_iw                 | g_iw_t                                          |  Self-energy in Matsubara frequencies. Dependent on M_iw                                                                                            |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3pp_iw                  | std::optional<chi3_iw_t>                        |  Building block for the fermion boson vertex (pp channel) in Matsubara frequencies                                                                  |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3ph_iw                  | std::optional<chi3_iw_t>                        |  Building block for the fermion boson vertex (ph channel) in Matsubara frequencies                                                                  |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | M3xph_iw                 | std::optional<chi3_iw_t>                        |  Building block for the fermion boson vertex (xph channel) in Matsubara frequencies                                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | F_iw                     | std::optional<chi4_iw_t>                        |  The two-particle vertex function in purely fermionic notation (iw1, iw2, iw3)                                                                      |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | Fpp_iw                   | std::optional<chi4_iw_t>                        |  The two-particle vertex function (pp channel)                                                                                                      |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | Fph_iw                   | std::optional<chi4_iw_t>                        |  The two-particle vertex function (ph channel)                                                                                                      |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2_conn_iw               | std::optional<chi4_iw_t>                        |  The connected part of the two-particle Green function                                                                                              |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2pp_conn_iw             | std::optional<chi4_iw_t>                        |  The connected part of the two-particle Green function (pp channel)                                                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2ph_conn_iw             | std::optional<chi4_iw_t>                        |  The connected part of the two-particle Green function (ph channel)                                                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2_iw                    | std::optional<chi4_iw_t>                        |  The two-particle Green function                                                                                                                    |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2pp_iw                  | std::optional<chi4_iw_t>                        |  The two-particle Green function (pp channel)                                                                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G2ph_iw                  | std::optional<chi4_iw_t>                        |  The two-particle Green function (ph channel)                                                                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2pp_iw                | std::optional<chi2_iw_t>                        |  The equal time correlator :math:`\chi_2` in the particle-particle channel in Matsubara frequencies                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2ph_iw                | std::optional<chi2_iw_t>                        |  The equal time correlator :math:`\chi_2` in the particle-hole channel in Matsubara frequencies                                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2pp_conn_tau_from_M3  | std::optional<chi2_tau_t>                       |  M2 in the particle-particle channel in imaginary time as obtained from M3                                                                          |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2ph_conn_tau_from_M3  | std::optional<chi2_tau_t>                       |  M2 in the particle-hole channel in imaginary time as obtained from M3                                                                              |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2xph_conn_tau_from_M3 | std::optional<chi2_tau_t>                       |  M2 in the particle-hole-cross channel in imaginary time as obtained from M3                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2pp_tau_from_M3       | std::optional<chi2_tau_t>                       |  The equal time correlator :math:`\chi_2` in the particle-particle channel in imaginary times as obtained from M3pp_tau                             |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2ph_tau_from_M3       | std::optional<chi2_tau_t>                       |  The equal time correlator :math:`\chi_2` in the particle-hole channel in imaginary times as obtained from M3ph_tau                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2xph_tau_from_M3      | std::optional<chi2_tau_t>                       |  The equal time correlator :math:`\chi_2` in the particle-hole-cross channel in imaginary times as obtained from M3ph_tau                           |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2pp_iw_from_M3        | std::optional<chi2_iw_t>                        |  The equal time correlator :math:`\chi_2` in the particle-particle channel in imaginary frequencies as obtained from M3pp_tau                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2ph_iw_from_M3        | std::optional<chi2_iw_t>                        |  The equal time correlator :math:`\chi_2` in the particle-hole channel in imaginary frequencies as obtained from M3ph_tau                           |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi2xph_iw_from_M3       | std::optional<chi2_iw_t>                        |  The equal time correlator :math:`\chi_2` in the particle-hole-cross channel in imaginary frequencies as obtained from M3ph_tau                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chiAB_iw                 | std::optional<gf<imfreq>>                       |  The correlation function :math:`\chi_AB` in imaginary frequencies                                                                                  |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi3pp_iw                | std::optional<chi3_iw_t>                        |  The equal time correlator :math:`\chi_3` in the particle-particle channel in Matsubara frequencies                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi3ph_iw                | std::optional<chi3_iw_t>                        |  The equal time correlator :math:`\chi_3` in the particle-hole channel in Matsubara frequencies                                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi3xph_iw               | std::optional<chi3_iw_t>                        |  The equal time correlator :math:`\chi_3` in the particle-hole-cross channel in Matsubara frequencies                                               |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi3pp_iw_nfft           | std::optional<chi3_iw_t>                        |  The equal time correlator :math:`\chi_3` in the particle-particle channel in Matsubara frequencies as obtained by the NFFT :math:`M_3` measurement |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | chi3ph_iw_nfft           | std::optional<chi3_iw_t>                        |  The equal time correlator :math:`\chi_3` in the particle-hole channel in Matsubara frequencies as obtained by the NFFT :math:`M_3` measurement     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G0_iw                    | g_iw_t                                          |  Noninteracting Green Function in Matsubara frequencies                                                                                             |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | D0_iw                    | std::optional<block2_gf<imfreq, matrix_valued>> |  Dynamic density-density interaction in Matsubara frequencies                                                                                       |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | Jperp_iw                 | std::optional<gf<imfreq, matrix_valued>>        |  Dynamic spin-spin interaction in Matsubara frequencies                                                                                             |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G0_shift_iw              | g_iw_t                                          |  The shifted noninteracting Green Function in Matsubara frequencies                                                                                 |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | G0_shift_tau             | g_tau_t                                         |  The shifted noninteracting Green Function in imaginary time                                                                                        |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | constr_params            | constr_params_t                                 |                                                                                                                                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
   | last_solve_params        | std::optional<solve_params_t>                   |                                                                                                                                                     |
   +--------------------------+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+


Member functions
----------------

.. table::
   :widths: 40 60


   +--------------------------------------------------------------+--+
   | :ref:`(constructor) <triqs_ctint__solver_core__constructor>` |  |
   +--------------------------------------------------------------+--+
   | :ref:`solve <triqs_ctint__solver_core__solve>`               |  |
   +--------------------------------------------------------------+--+

.. toctree::
    :hidden:

    solver_core/constructor
    solver_core/solve